Run custom build dialog UI fixes. 1. Slave select box and priority select box wrapped with select2 jQuery select box. 2. Fixed checkboxes for force builds options styling, made checkbox label also clickable.

--- a/www/sass/modules/page-elements/_search-drop-down.scss
+++ b/www/sass/modules/page-elements/_search-drop-down.scss
@@ -72,10 +72,6 @@ div.common-branch-select {
     }
 }
 
-.more-info-box .select2-container {
-	width:150px;
-}
-
 .select2-container,
 .select2-drop,
 .select2-search,
